# LCD-show

./: LCD-hdmi  LCD5-show
boot/: cmdline.txt  config.txt  shh-reboot
etc/: rc.local
rpi-fbcp/: CMakeLists.txt
